--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -55,7 +55,7 @@
  #Left
  PRJ_steady_as_she_goes:0 "Status Quo"
  PRJ_steady_as_she_goes_desc:0 "The situation outside of the country is to chaotic, Let us not do anything radical."
- PRJ_kings_budget:0 "Royal Highways."
+ PRJ_kings_budget:0 "Royal Highways"
  PRJ_kings_budget_desc:0 "Continuing the massive undertaking, More governmental initiative to build roads must be made conecting every faccit of the empire."
  PRJ_foster_war_support:0 "Prepare for war"
  PRJ_foster_war_support_desc:0 "By reminding the populace of the treats around us they will be ready for war when the time comes."
@@ -64,10 +64,61 @@
  PRJ_recruitment:0 "Recruitment Pamphlets"
  PRJ_recruitment_desc:0 "It is every loyal subjects duty to serve his country. By giving some incentives we can surely gain more support for the military"
  PRJ_the_mausoleum:0 "King Otto's Mausoleum" #of the Arbiter
- PRJ_the_mausoleum_desc:0 "King Otto Died just as the Great Depresion kicked in, its about time we give respect to the man who saved our nation from subjigation from the British"
+ PRJ_the_mausoleum_desc:0 "We must finish King Otto's Mausoleum so that we can properly honor his memory. A man of such stature and importance requires a fitting memorial."
  PRJ_kings_vendetta:0 "Roderiqs War"
  PRJ_kings_vendetta_desc:0 "With the european powers currently busy killing eachother in Europe, King Roderiq has made it clear that this is our chanc to free the rest of africa from subjugation and reclaim what has been lost. Africa's Destiny is in his hands."
  PRJ_warrior_king:0 "Warrior King"
  PRJ_warrior_king_desc:0 "The King will prove his mettle. He has joined his fellow soldiers on the frontlines!" #need to seperate joining army to add here
  PRJ_faith_and_arms:0 "Faith and Arms"
  PRJ_faith_and_arms_desc:0 "We must believe in our King. If he believes we can go toe to toe with the largest empire in history them we must rise to the occasion."
+ PRJ_core_teritory:0 "Our Core Territory"
+ PRJ_core_teritory_desc:0 "In war there are winners and losers. So too will some areas of a nation benefit more from the spoils of war than others. The center of our great nation, our Yohannian citizens, must be given the best at the expense of others."
+ PRJ_new_subjects:0 "Our New Subjects"
+ PRJ_new_subjects_desc:0 "We are liberators not conquerors. We must ensure that all resources are distributed fairly among the residents of our nation, whether they be citizens of old or from brand new acquisitions."
+ PRJ_greater_yohannia:0 "The Grand Expansion"
+ PRJ_greater_yohannia_desc:0 "Many of the lands surrounding our borders historically belong to us. We must begin the process of returning them to their rightful owners."
+ PRJ_annex_uganda:0 "Annex the Bugandan Lands"
+ PRJ_annex_uganda_desc:0 "The Bugandan and Buayoro Kingdoms were tributaries to the Greater Yohannian Empire in the past, after their conquest by the british they have been opressed, we shall integrate them into our empire properly to defend them." 
+ PRJ_annex_wakanda:0 "Reintegrate the Upper Provinces"
+ PRJ_annex_wakanda_desc:0 "After 1902 Britain ripped the Upper Provinces from our kingdom, its time we reintigrate them." 
+ PRJ_annex_rift:0 "Reintegrate the Poqot Provinces"
+ PRJ_annex_rift_desc:0 "The Poqot Provinces once prosperous miners ripped from us by Britain in 1902 forced to endour terrible conditions. No more! They will be properly re integrated into our kingdom."
+ PRJ_annex_rawanda:0 " Annex the Old Kingdom of Rawanda"
+ PRJ_annex_rawanda_desc:0 "Rawanda and Burundi once properous kingdoms before the europeans arrived. Shall be integrated into our Kingdom to better their old home."
+ PRJ_annex_east_zaire:0 "Annex Hautenturi"
+ PRJ_annex_east_zaire_desc:0 "The Lushious forests of Hautenturi were eyed for many years before the british came, its time to properly join it into our kingdom."
+ PRJ_annex_south_province:0 "Integrate the Mwangan Kingdom"
+ PRJ_annex_south_province_desc:0 "The Mwangan Kingdom, once a hostile kingom toward Yohannian interests now brought under fold of our great kingdom."
+ PRJ_railway_west:0 "Railway into Hautenturi"
+ PRJ_railway_west_desc:0 "We must expand our rail netwrok into the rainforest if we are to properly fight the Belgians."
+ PRJ_railway_east:0 "Upgrade the Kenya Railways"
+ PRJ_railway_east_desc:0 "The British had built rails to Yohannia to gain acces to our mines, we need to upgrade that line to support our war effort."
+ PRJ_railway_south_shore:0 "The Nile Sea Railways"
+ PRJ_railway_south_shore_desc:0 "The Great Nile Railway to link all the cities around the sea is a good aproach to steel shortages once completed."
+ PRJ_march_to_sea:0 "The March to the Ocean"
+ PRJ_march_to_sea_desc:0 "Too long the world was far away. The former British sea ports on the Indo-Lemurian Ocean are finally ours."
+ PRJ_kenya_naval:0 "Kenyan Naval Yards"
+ PRJ_kenya_naval_desc:0 "We must build a fleet to guard our new coast lines!"
+ PRJ_red_sea_naval:0 "Red Sea Fleet"
+ PRJ_red_sea_naval_desc:0 "Moses parted the sea once before; now we shall part Britain from her empire!"
+ PRJ_fortress_yohannia:0 "Fortress Yohannia"
+ PRJ_fortress_yohannia_desc:0 "We must prepare for unexpected strikes, we are very over extended we need forts around our core to prevent stealthy breakthroughs."
+ 
+ PRJ_supply_ethiopia:0 "Supply the Ethiopian Army"
+ PRJ_supply_ethiopia_desc:0 "Ethiopia is in a desperate position they dont have enough guns, We shall give some so they can keep fighting."
+ PRJ_heavy_rail_ETH_capital:0 "Heavy Ethiopian Rails"
+ PRJ_heavy_rail_ETH_capital_desc:0 "The railrays to Addis Ababa are insufficient for our armed forces to support them, we will build them whether ethiopia wants them or not is irrelivent."
+ PRJ_emergancy_fortifications:0 "Fortify Addis Ababa"
+ PRJ_emergancy_fortifications_desc:0 "Emperor Haile Salassie asked if we could fortify the region aroun the capital, we shall send the materials at once."
+ 
+ PRJ_pushed_to_sea:0 "Own the coasts"
+ PRJ_pushed_to_sea_desc:0 "The sea is now in sight, Soon Mussolinis bargin bin Roman Empire will crumble to dust.
+ PRJ_white_peace:0 "Kebra Nagast" #this is a book of Ethipoian tales and Prophecies of which the descriptaion comes from
+ PRJ_white_peace_desc:0 "The power of Rome has be eclipsed by the power of not just Ethiopia, but Yohannia aswell."
+ PRJ_proper_alliance:0 "A proper Alliance"
+ PRJ_proper_alliance_desc:0 "The Free Africa Movement is in full swing and cant be stopped now."
+ PRJ_control_ethiopia:0 "More than Friends, Brothers"
+ PRJ_control_ethiopia_desc:0 ""Emperor Salassie Recognises that his empire needs some more proper guidence. King Roderiq is very much willing to lend a hand in industrializing."
+ 
+ 
+ 
