Yohanian foci mostly loaclized

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -110,15 +110,85 @@
  PRJ_heavy_rail_ETH_capital_desc:0 "The railrays to Addis Ababa are insufficient for our armed forces to support them, we will build them whether ethiopia wants them or not is irrelivent."
  PRJ_emergancy_fortifications:0 "Fortify Addis Ababa"
  PRJ_emergancy_fortifications_desc:0 "Emperor Haile Salassie asked if we could fortify the region aroun the capital, we shall send the materials at once."
- 
+
  PRJ_pushed_to_sea:0 "Own the coasts"
- PRJ_pushed_to_sea_desc:0 "The sea is now in sight, Soon Mussolinis bargin bin Roman Empire will crumble to dust.
+ PRJ_pushed_to_sea_desc:0 "The sea is now in sight, Soon Mussolinis bargin bin Roman Empire will crumble to dust."
  PRJ_white_peace:0 "Kebra Nagast" #this is a book of Ethipoian tales and Prophecies of which the descriptaion comes from
  PRJ_white_peace_desc:0 "The power of Rome has be eclipsed by the power of not just Ethiopia, but Yohannia aswell."
  PRJ_proper_alliance:0 "A proper Alliance"
  PRJ_proper_alliance_desc:0 "The Free Africa Movement is in full swing and cant be stopped now."
  PRJ_control_ethiopia:0 "More than Friends, Brothers"
  PRJ_control_ethiopia_desc:0 ""Emperor Salassie Recognises that his empire needs some more proper guidence. King Roderiq is very much willing to lend a hand in industrializing."
+ PRJ_prepare_for_more:0 "Prepare For Europes Return"
+ PRJ_prepare_for_more_desc:0 "Its only a mater of time before the Europeans come back to put us down, We must pepare our industry for more."
+ PRJ_ETH_kicking_and_screaming:0 "Ethiopian Industry"
+ PRJ_ETH_kicking_and_screaming_desc: "Ethiopia was to slow on the draw of industrialization. We will drag her to the modern era kicking and screaming."
+ PRJ_fund_ETH_docks:0 "Build Ethiopian Naval Yards"
+ PRJ_fund_ETH_docks_desc:0 "Ethiopia is the only one with a coast now, She must build a navy and quickly!"
+ PRJ_ETH_coastal_defence:0 "Fortify the Coasts"
+ PRJ_ETH_coastal_defence_desc:0 "The Itallians will come back we must be ready!"
+ PRJ_ETH_military_factory:0 "Addis Ababa Military Arms"
+ PRJ_ETH_military_factory_desc:0 "If Ethiopia is to survive another encounter with Europe she must havbe the arnements to supply herselves, by loaning the designs from Malipta Arms and the old factory equipment for our older models they should be able to begin properly supplying themselves."
+ PRJ_ETH_steel_factory:0 "Ethiopian Steel"
+ PRJ_ETH_steel_factory_desc:0 "The Prodcution of Steel in Ethiopia is laughable, several investors have already come forth and begun to build several steel mills"
+ PRJ_ETH_alumin_factory:0 "Ethiopian Aluminum"
+ PRJ_ETH_alumin_factory_desc:0 "Ethiopia Doesnt Produce much aluminum, we must remedy that if they are to make an airforce." 
+ PRJ_ETH_occupy_yemen:0 "Occupy North Yemen"
+ PRJ_ETH_occupy_yemen_desc:0 "It is vital we control some access to the Red Sea, If we Take North Yenen we can control some trade going through the region."
+ PRJ_ETH_sea_rails:0 "Rails to the Ports"
+ PRJ_ETH_sea_rails_desc:0 "Our goods are wanted accross the world, we must make it easier for our goods to reach the Ethiopian Ports"
+ PRJ_ETH_chemicals:0 "Ethiopian Petrochemicals"
+ PRJ_ETH_chemicals_desc:0 "Any oil is beter than no Oil, simple refineries should help sustain ethiopias modicum mechanized forces."
+ PRJ_ETH_war_command_focus:0 "Addis Ababa - Nahklagluta War Command"
+ PRJ_ETH_war_command_focus_desc:0 "The adhoc military comand between our two nations have been more formalized now that the italian threat has been delt with."
+ PRJ_ETH_purchase_somaliland:0 "Purchase Somaliland"
+ PRJ_ETH_purchase_somaliland_desc: "With the war in Europe the British and French have requested it be payed in gold and that we join the Allies"
+ PRJ_purchase_kenya:0 "Purchase Kenya"
+ PRJ_purchase_kenya_desc:0 "With the war in Europe the British have requested Kenya be payed in gold and that we join the Allies"
+ PRJ_fufill_promise:0 "Join the Allies"
+ PRJ_fufill_promise_desc:0 "Its time we fufill our bargin"
+ PRJ_renegade:0 "Betray the Allies"
+ PRJ_renegade_desc:0 "We cant trust them! WE must take what is ours before its too late!"
+ #free Africa
+ PRJ_free_africa:0 "Freedom of Africa"
+ PRJ_free_africa_desc:0 "Africa is a large place we cant hope to run it all, New kingdoms ment to govern themselves must be made."
+ PRJ_client_sudan:0 "United Kingdom of Aoidia, Makuria, and Sudan"
+ PRJ_client_sudan_desc:0 "unknown flavor"
+ PRJ_client_egypt:0 "Kingdom of Aegyptus"
+ PRJ_client_egypt_desc:0 "flavor"
+ PRJ_client_tripoli:0 "Kingdom of Tripoli"
+ PRJ_client_tripoli_desc:0 "flavor"
+ PRJ_client_tunisia:0 "Kingdom of Carthago"
+ PRJ_client_tunisia_desc:0 "flavor"
+ PRJ_client_morocco:0 "Kingdom of Morocco"
+ PRJ_client_morocco_desc:0 "flavor"
+ PRJ_client_israel:0 "Kingdom of Israel"
+ PRJ_client_israel_desc:0 "flavor"
+ PRJ_client_palestine:0 "Kingdom of Palestine"
+ PRJ_client_palestine_desc:0 "flavor"
+ PRJ_client_jordon:0 "Kingdom of Jordon"
+ PRJ_client_jordon_desc:0 "flavor"
+ PRJ_client_syria:0 "Kindom of Damascus"
+ PRJ_client_syria_desc:0 "flavor"
+ PRJ_client_congo:0 "Kingdom of Zaire"
+ PRJ_client_congo_desc:0 "flavor"
+ PRJ_client_chad:0 "United Kingdom of Wadia and Sokoto"
+ PRJ_client_chad_desc:0 "flavor"
+ PRJ_client_gabon:0 "Kingdom of Gabon"
+ PRJ_client_gabon_desc:0 "flavor" #no nation occupied its spot till colonialism
+ PRJ_client_tanzania:0 "Kingdom of Zanzibar"
+ PRJ_client_tanzania_desc:0 "flavor"
+ PRJ_client_zambia:0 "Kingdom of Kololo"
+ PRJ_client_zambia_desc:0 "flavor"
+ PRJ_client_zimbabwe:0 "Kingdom of Shona"
+ PRJ_client_zimbabwe_desc:0 "flavor"
+ PRJ_client_malawi:0 "Kingdom of Nyasaland" #Nyasa means lake(=^･ω･^=)
+ PRJ_client_malawi_desc:0 "flavor"
+ PRJ_client_mozambique:0 "Kingdom of Maravi"
+ PRJ_client_mozambique_desc:0 "flavor"
  
- 
- 
+ #industry
+ PRJ_industrial_park:0 "Nakhlagluta Industrial Park"
+ PRJ_industrial_park_desc:0 "To revitalize our national economy we must start somewhere and what better place to start than the capital?"
+ PRJ_finish_modern_rails:0 "Finish Yohannian Rails 
+ PRJ_finish_modern_rails_desc:0 "Our nation must draw closer through better connections between the disparate areas. Railways have been a tried and true method of linking regions to the capital."
