--- a/localisation/aml_countries_cosmetic_l_english.yml
+++ b/localisation/aml_countries_cosmetic_l_english.yml
@@ -44,8 +44,8 @@
  PRJ_ISR_puppet_subject_DEF:0 "the Kingdom of Israel"
  PRJ_LBA_puppet_subject:0 "Tripoli Kingdom"
  PRJ_LBA_puppet_subject_DEF:0 "the Kingdom of Tripoli"
- PRJ_EGY_puppet_subject:0 "Kingdom of Egypt"
- PRJ_EGY_puppet_subject_DEF:0 "the Kingdom of Egypt"
+ PRJ_EGY_puppet_subject:0 "Kingdom of Aegyptus"
+ PRJ_EGY_puppet_subject_DEF:0 "the Kingdom of Aegyptus"
  PRJ_SUD_puppet_subject:0 "United Kingdom of Alodia, Makuria, and Sudan"
  PRJ_SUD_puppet_subject_DEF:0 "the United Kingdom of Alodia, Makuria, and Sudan"
  PRJ_CHA_puppet_subject:0 "United Kingdom of Wadia and Sokoto"
@@ -56,9 +56,9 @@
  PRJ_TZN_puppet_subject_DEF:0 "the Kingdom of Zanzibar"
  PRJ_ZAM_puppet_subject:0 "Kingdom of Kololo"
  PRJ_ZAM_puppet_subject_DEF:0 "the Kingdom of Kololo"
- PRJ_MLW_puppet_subject:0 "Kingdom of Maravi"
- PRJ_MLW_puppet_subject_DEF:0 "the Kingdom of Maravi"
+ PRJ_MLW_puppet_subject:0 "Kingdom of Nyasaland" #Nyasa means lake(=^･ω･^=)
+ PRJ_MLW_puppet_subject_DEF:0 "the Kingdom of Nyasaland"
  PRJ_ZIM_puppet_subject:0 "Shona Kingdom"
  PRJ_ZIM_puppet_subject_DEF:0 "the Kingdom of Shona"
- PRJ_MZB_puppet_subject:0 "Kingdom of Nyasaland" #Nyasa means lake(=^･ω･^=)
- PRJ_MZB_puppet_subject_DEF:0 "the Kingdom of Nyasaland"
+ PRJ_MZB_puppet_subject:0 "Kingdom of Maravi" 
+ PRJ_MZB_puppet_subject_DEF:0 "the Kingdom of Maravi"
