--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -122,7 +122,7 @@
  PRJ_prepare_for_more:0 "Prepare For Europes Return"
  PRJ_prepare_for_more_desc:0 "Its only a mater of time before the Europeans come back to put us down, We must pepare our industry for more."
  PRJ_ETH_kicking_and_screaming:0 "Ethiopian Industry"
- PRJ_ETH_kicking_and_screaming_desc: "Ethiopia was to slow on the draw of industrialization. We will drag her to the modern era kicking and screaming."
+ PRJ_ETH_kicking_and_screaming_desc:0 "Ethiopia was to slow on the draw of industrialization. We will drag her to the modern era kicking and screaming."
  PRJ_fund_ETH_docks:0 "Build Ethiopian Naval Yards"
  PRJ_fund_ETH_docks_desc:0 "Ethiopia is the only one with a coast now, She must build a navy and quickly!"
  PRJ_ETH_coastal_defence:0 "Fortify the Coasts"
