Zerzura state and Marrah state added

--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -273,3 +273,5 @@
  VICTORY_POINTS_13131: "Muru'ona"
  VICTORY_POINTS_10769: "Monterrey"
  VICTORY_POINTS_12835: "Nuevo Laredo"
+ VICTORY_POINTS_10795: "ad-Duwaym"
+ VICTORY_POINTS_1960: "Nyala"
