Zerzura and fixes

--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1,12 +1,28 @@
 ﻿l_english:
- PRJ_fascism:2 "Unitary Africa"
- PRJ_fascism_DEF:2 "Unitary Africa"
+ PRJ_fascism:2 "Unitary Yohannia"
+ PRJ_fascism_DEF:2 "Unitary Yohannia"
  PRJ_democratic:0 "Yohannia"
  PRJ_democratic_DEF:0 "Yohannia"
  PRJ_neutrality:1 "Yohannia"
- PRJ_neutrality_DEF:1 "Yohannia"
- PRJ_communism:2 "People's Republic of Africa"
- PRJ_communism_DEF:2 "the People's Republic of Africa"
+ PRJ_neutrality_DEF:1 "the Kingdom of Yohannia"
+ PRJ_communism:2 "People's Republic of Yohannia"
+ PRJ_communism_DEF:2 "the People's Republic of Yohannia"
+ PRJ_fascism_ADJ:1 "Yohannian"
+ PRJ_democratic_ADJ:0 "Yohannian"
+ PRJ_neutrality_ADJ:1 "Yohannian"
+ PRJ_communism_ADJ:1 "Yohannian"
+ ZER_fascism:2 "Unitary Zerzura"
+ ZER_fascism_DEF:2 "Unitary Zerzura"
+ ZER_democratic:0 "Zerzura"
+ ZER_democratic_DEF:0 "Zerzura"
+ ZER_neutrality:1 "Kingdom of Zerzura"
+ ZER_neutrality_DEF:1 "the Kingdom of Zerzura"
+ ZER_communism:2 "People's Republic of Zerzura"
+ ZER_communism_DEF:2 "the People's Republic of Zerzura"
+ ZER_fascism_ADJ:1 "Zerzuran"
+ ZER_democratic_ADJ:0 "Zerzuran"
+ ZER_neutrality_ADJ:1 "Zerzuran"
+ ZER_communism_ADJ:1 "Zerzuran"
  ZEN_fascism_ADJ:1 "Zenagan"
  ZEN_democratic_ADJ:0 "Zenagan"
  ZEN_neutrality_ADJ:1 "Zenigalese"
