Zerzura in focus of yohannia

--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -152,8 +152,10 @@
  #free Africa
  PRJ_free_africa:0 "Freedom of Africa"
  PRJ_free_africa_desc:0 "Africa is a large place we cant hope to run it all, New kingdoms ment to govern themselves must be made."
- PRJ_client_sudan:0 "United Kingdom of Aoidia, Makuria, and Sudan"
+ PRJ_client_sudan:0 "United Kingdom of Aoidia, Makuria"
  PRJ_client_sudan_desc:0 "unknown flavor"
+ PRJ_client_zerzura:0 "Kingdom of Zerzura"
+ PRJ_client_zerzura_desc:0 "In the 1930s the british finally absorbed the kingdom of Zerzura, their king some miulitary and civilians fled to yohannia, With the focers of britain running and the control over theses lands secure we shall give them back to the rightfull king"
  PRJ_client_egypt:0 "Kingdom of Aegyptus"
  PRJ_client_egypt_desc:0 "flavor"
  PRJ_client_tripoli:0 "Kingdom of Tripoli"
