PRJ Tree localization

--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  mandalism:0 "Mandalism"
- mandalism_desc:0 "Mandalism"
+ mandalism_desc:0 "Based on the ancient Indolemurian concept of the village council, the Mandala. Mandalism allows for ownership of private property, however the local Mandala will decide if the use of the property is beneficial to society as a whole. Thus, a balance of private and public interests is maintained."
  islamic_fundamentalism:0 "Islamic Fundamentalism"
- islamic_fundamentalism_desc:0 "Islamic Fundamentalism"
+ islamic_fundamentalism_desc:0 "Islamic Fundamentalism seeks to bring society into accordance with the guidance of the Q'ran, the Nabī -prophets- and the Rasūl -messengers-. They will impose Sharia Law, or religious law, to enforce righteousness in society."
  MUU_fascism_party:0 "Mu Virinji Partizi"
  MUU_communism_party:0 "Munu Qomiunist Partizi"
  MUU_democratic_party:0 "Temoqrazi Partizi"
@@ -38,6 +38,7 @@
  KUM_communism_party:0 "Communist Party of Kumari"
  KUM_fascism_party:0 "Kumari Kandam Congress"
  PRJ_neutrality_party:0 "Hierosolimitanus Dynasty"
- PRJ_fascism_party:0 "Religious Zealots"
- PRJ_democratic_party:0 "House of Peasents"
- PRJ_communism_party:0 "Qumuism Party"
+ PRJ_fascism_party:0 "Religious Parties of Yohannia"
+ PRJ_democratic_party:0 "IDPY"
+ PRJ_democratic_party_long:0 "Independent Democratic Parties of Yohannia"
+ PRJ_communism_party:0 "Yohannian Communist Party"
