--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -155,7 +155,7 @@
  PRJ_client_sudan:0 "United Kingdom of Alodia and Makuria"
  PRJ_client_sudan_desc:0 "Many centuries ago both Alodia and Makuria were our northern neighbors, with whom we shared trade and cultural ties. The dastardly British have subjugated the area and terribly oppressed the people. We shall free them and give them back their country!"
  PRJ_client_zerzura:0 "Kingdom of Zerzura"
- PRJ_client_zerzura_desc:0 "In the 1920s when the British finally absorbed the Kingdom of Zerzura, the Zerzuran king, some of their military and a few civilians fled to Yohannia. With the forces of Britain on the run and full control established over the Zerzuran lands we shall reestablish the Zerzuran kingdom."
+ PRJ_client_zerzura_desc:0 "In the 1920s when the British finally absorbed the Kingdom of Zerzura, the Zerzuran king, some of his military and a few civilians fled to Yohannia. With the forces of Britain on the run and full control established over the Zerzuran lands we shall reestablish the Zerzuran kingdom."
  PRJ_client_egypt:0 "Kingdom of Aegyptus"
  PRJ_client_egypt_desc:0 "Egypt has long been a source of civilization and industry. We have freed the Egyptians from the yoke of the European conquerors and will once again raise them up as a civilization."
  PRJ_client_tripoli:0 "Kingdom of Tripoli"
@@ -192,5 +192,27 @@
  #industry
  PRJ_industrial_park:0 "Nakhlagluta Industrial Park"
  PRJ_industrial_park_desc:0 "To revitalize our national economy we must start somewhere and what better place to start than the capital?"
- PRJ_finish_modern_rails:0 "Finish Yohannian Rails 
+ PRJ_finish_modern_rails:0 "Finish Yohannian Rails" 
  PRJ_finish_modern_rails_desc:0 "Our nation must draw closer through better connections between the disparate areas. Railways have been a tried and true method of linking regions to the capital."
+ PRJ_turkana_cleanup:0 "Lake Turkana Remediation Project" 
+ PRJ_turkana_cleanup_desc:0 "By repairing the significant ecological damage caused by our early petrochemical industry in the Lake Turkana Basin we can improve our industrial output without harming our own people."
+ PRJ_oil:0 "Budding Oil Industry" 
+ PRJ_oil_desc:0 "We must provide enough oil and oil products for our industry to thrive."
+ PRJ_oil_2:0 "Improved Oil Industry" 
+ PRJ_oil_2_desc:0 "We do not yet produce enough oil to call ourselves self-sufficient. We must correct this problem."
+ PRJ_rubber:0 "Early Rubber Industry" 
+ PRJ_rubber_desc:0 "Rubber is one of the necessary materials for a modern society. We must explore ways of growing our own rubber trees to free ourselves of foreign imports."
+ PRJ_rubber_2:0 "Expanded Rubber Industry" 
+ PRJ_rubber_2_desc:0 "Now that a thriving rubber industry has been established we can utilize government loans to further expand it."
+ PRJ_civilian_projects:0 "Civilian Projects I" 
+ PRJ_civilian_projects_desc:0 "For our people to succeed they must have the necessities of life, and one of those necessities is work. We will utilize low interest loans to ensure sufficient industrialization in our nation."
+ PRJ_civilian_projects_2:0 "Civilian Projects II" 
+ PRJ_civilian_projects_2_desc:0 "Our industrialization projects are bearing fruit. With more effort we can benefit more of our people."
+ PRJ_civilian_projects_3:0 "Civilian Projects III" 
+ PRJ_civilian_projects_3_desc:0 "With industry now booming in our nation it would behoove us to ensure that every citizen is employed gainfully."
+ PRJ_military_projects:0 "Military Projects I" 
+ PRJ_military_projects_desc:0 "If we are to defend our nation and enforce our will internationally we must have enough military industry."
+ PRJ_military_projects_2:0 "Military Projects II" 
+ PRJ_military_projects_2_desc:0 "The world is a dangerous place, and without weapons Yohannia will not survive."
+ PRJ_military_projects_3:0 "Military Projects III" 
+ PRJ_military_projects_3_desc:0 "The arms industry is not only necessary, it is profitable. Our people will benefit from arms manufacturing now and in the future."
