--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -3,14 +3,14 @@
  LOADING_TIP_2:0 "\"You drive tanks down the streets, and then expect us to believe you when you call for peace?\"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_3:0 "\"Vorwärts! Vorwärts und steche ihnen in die Augen!\"\n - Heinrich Schmidt, F.S.M. Freikorps."
  LOADING_TIP_4:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohoq addressing his troops a moment before an enemy bullet killed him."
- LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us, their new masters.\"\n - Japanese Emperor Showa" #Hoi4 does not recognise the weird o
+ LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us their new masters.\"\n - Japanese Emperor Showa" #Hoi4 does not recognise the weird o
  LOADING_TIP_6:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_7:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
  LOADING_TIP_8:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
  LOADING_TIP_9:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Angus Fritzroy"
  LOADING_TIP_10:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
- LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Neiwakxinguk of Mu to Horujj Uaqril of Geq."
+ LOADING_TIP_12:0 "\"Your words are as empty as your future. You live because I allow it.\"\n - Ujjamun Nalangqu Gahrijjeom of Mu to Horujj Uaqril of Geq."
  LOADING_TIP_13:0 "\"If the British are so fond of the Geneva rules then they can follow them all they want! This is war, I subscribe to no such niceties.  \"\n - Yohannian General Beryihun Zeruyob Southern front" #Hes using poison gasses
  LOADING_TIP_14:0 "\"The Africans have suffered long enough! We will bring freedom to our neighbors or die trying. Damn the Europeans for their oppression of the African people! \"\n -King Roderiq I"
  LOADING_TIP_15:0 "\"We're to blame for the war? You attacked us long before and demanded our lands and people! No! We have your men surrounded and if you're willing to let them die for your foolish pride then so be it!\"\n -Lord Inqaral Dezama, Yohannian Envoy to the Allies"
@@ -19,12 +19,12 @@
  LOADING_TIP_18:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
  LOADING_TIP_19:0 "\"Four corners. Four Winds. Slide home the rifle bolt.\"\n -Coded Atlantean Transmission"
  LOADING_TIP_20:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n -British Lemurian Garrison Motto"
- LOADING_TIP_21:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n -Yangle Waglin Lumo"
+ LOADING_TIP_21:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n -Trinsuyinese General Yangle Waglin Lumo"
  LOADING_TIP_22:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n -General Miles Dempsey"
  LOADING_TIP_23:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n -King Wanulu of Qlach upon surrendering to the British"
  LOADING_TIP_24:0 "Everything the sea touches is ours\n - Atlantean Marine Corps Motto"
  LOADING_TIP_25:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n -German Messerschmitt pilot"
- LOADING_TIP_26:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
+ LOADING_TIP_26:0 "The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
  LOADING_TIP_27:0 "\"Not bad for a frightened school boy with a kite! Eh, Fritz?\"\n -Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
  LOADING_TIP_28:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany"
  LOADING_TIP_29:0 "\"God does not intend for the atom to be split for war no matter what the Americans may say.\"\n -Atlantean President Avaskanta Carras"
@@ -44,14 +44,14 @@
  LOADING_TIP_43:0 "\"I am not the hero the Africans wanted. I am the monster the British created.\"\n -King Roderiq I of Yohannia"
  LOADING_TIP_44:0 "\"What happens when the Light shines so painfully bright that it becomes more terrible than the Darkness?\"\n -Avaskanta Carras, upon learning of the nuclear detonations over Japan"
  LOADING_TIP_45:0 "\"We came for the soft belly of Europe and found a tough old gut: a nightmare of mountains and concrete and machine guns.\"\n -Lemurian General Arnold DeChamps in Italy"
- LOADING_TIP_46:0 "\"A man who compliments another to his face is either a homosexual, or a tactician. So which are you?\"\n King Roderiq I to Captured Atlanean General Rexet Nalingrat"
+ LOADING_TIP_46:0 "\"A man who compliments another to his face is either a homosexual or a tactician. So which are you?\"\n King Roderiq I to Captured Atlanean General Rexet Nalingrat"
  LOADING_TIP_47:0 "\"America, for all their talk of freedom, continues to ignore the plight of the Africans. If they will not help then we shall!\"\n -King Roderiq I of Yohannia"
  LOADING_TIP_48:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them.\"\n -King Roderiq I of Yohannia"
  LOADING_TIP_49:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself.\" -Atlantean Report on Project Tangerine"
  LOADING_TIP_50:0 "\"Dear God... What have they done?\"\n -King Roderiq on receiving photographic evidence of the Holocaust"
  LOADING_TIP_51:0 "\"When all bets are off and no one can enforce the rules of the game it is the dirtiest, meanest player who always wins in the end.\"\n -Houpo'ean Communist General Lumiu'u Takagate"
  LOADING_TIP_53:0 "\"The Allies are stronger than us, that is why we must make the casualties as lopsided as possible.\"\n -King Roderiq"
- LOADING_TIP_54:0 "\"His will knew not the limits of a mere man. No regrets, no remorse for the death and destruction he caused the civilians when the dam broke under the weight of battle. Only then did we realize the monster we created.\"\n - British General Edmund Powell on Yohannia's destruction of the Aswan Dam"
+ LOADING_TIP_54:0 "\"No regrets, no remorse for the death and destruction he caused the civilians when the dam broke under the weight of battle. Only then did we realize the monster we created.\"\n - British General Edmund Powell on Yohannia's destruction of the Aswan Dam"
  LOADING_TIP_55:0 "\"If there is one man to fear in all of Africa it is King Roderiq; both a tactical and strategic genius. We have tried to erase him, Lord knows we have tried, to no avail. In combat, by assassination... he refuses to go down. What is certain is that the Home Island has a lot of work to do to kill this upstart.\"\n -Atlantean Spymaster Tunaton Dzivin"
  LOADING_TIP_56:0 "\"I have no special talents. I merely bring all that I am to this fight; body, mind, and soul. Is it enough?\"\n -King Roderiq I"
  LOADING_TIP_57:0 "\"By God, what are those little men thinking? They're coming straight for the capital and somehow we can't stop them!\"\n - Unnamed Houpo'ean minister on the Trinsuyinese Army beseiging Loto Aai."
@@ -59,15 +59,15 @@
  LOADING_TIP_59:0 "\"Yohannia would love to think of itself as a cornered lion, when in reality it is a whipped cur that bites the hand of its betters.\"\n -General George Livingston III of British Lemuria 1944"
  LOADING_TIP_60:0 "\"We seek the great goal of a unified world and will achieve it, but we must first finish another goal: the destruction of the Trinsuyinese state. We will not sleep till we have wiped them from the face of the earth.\"\n -Houpo'ean Communist General Lumiu'u Takagate"
  LOADING_TIP_61:0 "\"A weak and contemptible people. That is what comes from a nation that turns its face from the wars and conflicts that make it great.\"\n -Jingyao Hai Qanli, Trinsuyinese Nationalist Party Leader"
- LOADING_TIP_62:0 "\"The Japanese and their Trinsuyinese dogs stand for nothing, and have overlooked one thing... This is our home. We shall bring them down with everything we have!\"\n -Malihinian General Havatu Intesumu"
+ LOADING_TIP_62:0 "\"The Japanese and their Trinsuyinese dogs stand for nothing and have overlooked one thing... This is our home. We shall bring them down with everything we have!\"\n -Malihinian General Havatu Intesumu"
  LOADING_TIP_63:0 "\"The trials of the Second World War are burnt into the surface of almost every African colony; once defended by a faithful few against insurmountable odds.\"\n -Anonymous South African soldier's letter to the British Parliament"
  LOADING_TIP_64:0 "\"They're all around us! We have no way out! Roderiq must be in league with the Devil himself!\"\n -Stray Atlantean radio transmission during Operation Whiteout"
  LOADING_TIP_65:0 "\"Mon Dieu! We have seriously underestimated the strength of the Kashvan military!\"\n -Henri Benoît Gagné de Melleroy, French Pantiyan Colonial Governor during the Kashvan siege of Port Lémurien"
  LOADING_TIP_66:0 "\"The Pantiyans and the French have held our territory for too long. We must reclaim our northern lands! We shall drive the French from Lemuria’s shores!\"\n -Kashvan First President, Hanutenga Pepabar during the official declaration of war on Pantiya"
  LOADING_TIP_67:0 "\"Hells bells! Damned barbarian rebels! They've cut off our damned supply lines! Typical damned British imperialist meddling; making us reliant on the damned duplicitous Mukhinis who would just as soon see our soldiers dead and buried after stabbing them themselves!\"\n -Dominion General Thomas Fitzpernell during Operation Hell’s Gate"
- LOADING_TIP_68:0 "\"I can no longer deny it; the Federal Republic of Kashvan has lost the war. We no longer have the strength to fight. I wish to not see more Kashvan blood spilled.\"\n -Kashvan First President, Hanutenga after the fall of Ilayaci and Shakwaram"
- LOADING_TIP_69:0 "\"After all of our sacrifice in keeping Pantiya out of Kashvan hands, we aren’t even invited to plead our case for independence? This is a crime against the Pantiyans and will not go unanswered!\"\n -Ilandarshe Meparkarsu, leader of the semi-collaborationist rebel cell, the Pantiyan Liberation Collective"
+ LOADING_TIP_68:0 "\"I can no longer deny it; the Federal Republic of Kashvan has lost the war. We no longer have the strength to fight. I wish to not see more Kashvan blood spilled.\"\n -Kashvan First President Hanutenga after the fall of Ilayaci and Shakwaram"
+ LOADING_TIP_69:0 "\"After all of our sacrifice in keeping Pantiya out of Kashvan hands we aren’t even invited to plead our case for independence? This is a crime against the Pantiyans that will not go unanswered!\"\n -Ilandarshe Meparkarsu, leader of the semi-collaborationist rebel cell, the Pantiyan Liberation Collective"
  LOADING_TIP_70:0 "\"Why does anyone fear the Europeans? We are sweeping through Pantiya and we will soon do the same to the rest of these European colonies. This continent belongs to us, not the damned Europeans!\"\n -Kashvan General N’uturgal after the fall of the city of Peruvala"
- LOADING_TIP_71:0 "\"I've brought the British and Atlanteans death, and forced them to kneel on my own. So no I cant assist in further military action in the Indo Lemurian ocean. We do not have the kind of infrastructure needed to fight at sea. Let alone then men to spare" \"\n - King Roderiq I to Kashvan envoys"
- LOADING_TIP_72:0 "\""I will not stand next to you.  You already told the world EXACTLY what I was, you just never expected me to fit the roll did you. You were SO DESPERATE to have an enemy to fight, so you could be the savior in Africa. Well here I am. Checkmate." \"\n - King Roderiq I to Atlantean Envoy in the Paris Peace Confernce?"
- LOADING_TIP_73:0 "\"Im fine with changing the status quo. But we will not let it go, now Africa is being torn apart." \"\n - E"
+ LOADING_TIP_71:0 "\"I've brought the British and Atlanteans death, and forced them to kneel on my own. So no, I cannot assist in further military action in the Indo-Lemurian ocean. We do not have the kind of infrastructure needed to fight at sea, let alone then men to spare." \"\n - King Roderiq I to Kashvan envoys"
+ LOADING_TIP_72:0 "\"I will not stand next to you. That would dignify you to a level far beyond what you deserve. You made me. You were so desperate to paint me as a monster yet it frightened you that I fit the roll so well. You did not save Africa, but then again, neither did I." \"\n - King Roderiq I to the Atlantean Envoy at the Paris Peace Conference"
+ LOADING_TIP_73:0 "\"Africa is burning! All of Britain's possessions are in danger of the hellfire stoked by that demon Roderiq!" \"\n - Godfrey Huggins, Prime Minister of Rhodesia and Nyasaland."
