--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -294,4 +294,23 @@
  FMU_divert_engines:0 "Divert Engines to Civilian Uses"
  FMU_divert_engines_desc:0 "The fertile western lands have long been the breadbasket of our nation, but with industrialization of farming they could provide enough for the continent!"
 
+ FMU_white_immigration_laws:0 "White Immigration Laws"
+ FMU_golden_factory:0 "Kaiser's Factories of Gold"
+ FMU_enforced_conscription:0 "Enforced Conscription"
+ FMU_pay_back_debt_to_the_ifc:0 "Pay Back the IFC"
+ FMU_pay_back_tt:0 "Pay Back Debt"
+ FMU_bad_diplo_outreach:0 "Poor Relations"
+ FMU_diplo_outreach:0 "Improving Relations"
+ FMU_consumer_goods:0 "Consumer Goods"
+ FMU_double_identity:0 "Dual Identity"
+ FMU_regional_dev_authority:0 "Regional Development Authorities"
+ FMU_democratic_reachout:0 "Democratic Outreach"
+ FMU_womens_rights:0 "Women's Rights"
+ FMU_democratic_weapons:0 "The Ache of War"
+ unternehmen_lowenherz:0 "Unternehmen Löwenherz"
+ FMU_communist_reachout:0 "Communist Outreach"
+ FMU_angry_commies:0 "Soviet Communist Outrage"
+ FMU_revolution_front:0 "Revolutionary Front"
+ FMU_commie_spies:0 "Freiestaater Communist Agitators"
+ ger_fmu_research:0 "Germanic Research Pact"
  FMU_manu_threat:0 "Freistaat Mu Annexed Manu!"
